# pbrlang

./: .gitignore  BIBLIOTECA_PADRAO.md  CAIXOTES.md  CONTRIBUINDO.md  Cargo.toml  INSTALACAO.md  README.md  calculadora.pbr  completo.pbr  controle_fluxo.pbr  install.ps1  install.sh
docs/: CLI.md  INSTALACAO.md  REFERENCIA.md
examples/: ola_mundo.pbr  pessoa.pbr  tipos_dados.pbr  usar_biblioteca.pbr
lib/: arquivo.pbr  colecoes.pbr  console.pbr  numero.pbr  sistema.pbr  texto.pbr  web.pbr
src/: ast.rs  caixotes.rs  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs  transpiler.rs
tests/: parser_test.rs
